# grid_kit

./: Cargo.toml  README.md  test.bat
src/: grid.rs  grid_u.rs  lib.rs
src/grid_behavior/: appending.rs  appending_u.rs  converter.rs  converter_u.rs  indexer.rs  indexer_u.rs  iterating.rs  iterating_u.rs  maths.rs  maths_u.rs  mod.rs
src/grid_parsing/: grid_matcher.rs  grid_matcher_u.rs  masks.rs  masks_u.rs  mod.rs  pathing.rs  pathing_u.rs  region.rs  region_u.rs  similarity.rs  similarity_u.rs  sub_grid.rs  sub_grid_u.rs
src/specific_grid_types/: image.rs  image_u.rs  mod.rs
src/specific_grid_types/font/: font copy.rs  font.rs  font_encoders.rs  mod.rs
src/specific_grid_types/font/font_table_parsers/: mod.rs  parse_font_cmap.rs  parse_font_glyf.rs  parse_font_head.rs  parse_font_hhea.rs  parse_font_htmx.rs  parse_font_loca.rs  parse_font_maxp.rs
src/storage/: bmp_conversion.rs  bmp_conversion_u.rs  bpm_conversion.rs  byte_conversion_grid.rs  byte_conversion_grid_u.rs  byte_conversion_t.rs  byte_conversion_t_u.rs  file_conversion.rs  file_conversion_u.rs  mod.rs  png_conversion.rs  png_conversion_u.rs
