[package]
name="grid_kit"
version="0.1.3"
edition="2024"

[dependencies]
bytes_parser={ git="https://github.com/SuccessfullyFailed/bytes_parser" }
urge_prique={ git="https://github.com/SuccessfullyFailed/urge_prique" }
file_ref={ git="https://github.com/SuccessfullyFailed/file_ref" }
image={ version="0.23.14", optional=true }

[features]
png_conversion=["dep:image"]